--- a/recette.css
+++ b/recette.css
@@ -19,10 +19,9 @@ p.categorie{
 }
 div.contenu{
     background-color: white;
-    margin:  60px 10% 80px 10%;
-    padding: 0 30px 30px 30px; 
-    min-width: 350px;
-    box-shadow: 0 0 2em rgba(0, 0, 0, 0.6);
+    margin:  40px 5px 40px 5px;
+    padding: 0 5px 0 5px; 
+    box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.6);
     overflow: visible;
 }
 h1{
@@ -63,17 +62,17 @@ table.info {
     width: 100%; 
     color: white; 
     background-color: #6c829dC0; 
-    height: 40px;
+    height: 50px;
 }
 
 table.info td {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     vertical-align: top;
 }
 
 table.info th {
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
     padding-bottom: 8px;
 }
@@ -87,7 +86,7 @@ img.info{
 }
 
 div.colonne1, div.colonne2{
-    width:  45%;
+    width:  100%;
 }
 
 h2{
@@ -101,11 +100,6 @@ h2{
 
 div.colonne1{
     display: inline-block;
-    margin-right: 10%;
-}
-
-div.colonne2{
-    float: right;
 }
 
 div.ingredients p{
@@ -142,4 +136,50 @@ td.consigne{
 
 table.preparation tr{
     height: 40px;
+}
+
+@media only screen and (min-width: 768px){
+    div.contenu{
+        margin:  60px 10% 80px 10%;
+        padding: 0 30px 30px 30px; 
+        min-width: 350px;
+    }
+    table.info {
+        position: absolute; 
+        bottom: 0px; 
+        width: 100%; 
+        color: white; 
+        background-color: #6c829dC0; 
+        height: 80px;
+    }
+    table.info th {
+        font-size: 16px;
+        vertical-align: bottom;
+        padding-bottom: 8px;
+    }
+    table.info td {
+        text-align: center;
+        font-size: 14px;
+        vertical-align: top;
+    }
+
+    div.colonne1, div.colonne2{
+        width:  45%;
+    }
+    
+    div.colonne1{
+        margin-right: 10%;
+    }
+    
+    div.colonne2{
+        float: right;
+    }
+
+    @media only screen and (min-width: 900px){
+        div.contenu{
+            margin-left: auto;
+            margin-right: auto; 
+            width: 645px;
+        }
+    }
 }
